--- a/src/assets/components/StarshipList/style.css
+++ b/src/assets/components/StarshipList/style.css
@@ -62,6 +62,9 @@ ul {
 }
 
 .details-btn {
+    background-color: #ffcc00;
+    color: #2d2d2d;
+    border: none;
     display: inline-block;
     width: fit-content;
     padding: 8px 16px;
@@ -69,5 +72,9 @@ ul {
     position: absolute;
     bottom: 24px;
     right: 24px;
+}
+
+.details-btn:hover {
+    background-color: #ffcc00cb;
 }
 
